--- a/main.html
+++ b/main.html
@@ -1,16 +1,96 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Roman Numeral Converter</title>
 
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      padding: 20px;
+      background: #f5f5f5;
+    }
+
+    h1 {
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    .container {
+      max-width: 400px;
+      margin: auto;
+      background: white;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    input {
+      width: 100%;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 5px;
+      border: 1px solid #ccc;
+      font-size: 16px;
+    }
+
+    button {
+      width: 100%;
+      margin-top: 15px;
+      padding: 12px;
+      background: #007bff;
+      color: white;
+      font-size: 16px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #0056b3;
+    }
+
+    #output {
+      margin-top: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      text-align: center;
+      background: #222;
+      color: #fff;
+      padding: 10px;
+      border-radius: 6px;
+      min-height: 40px;
+    }
+  </style>
+</head>
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-   </script>
+
+  <h1>Roman Numeral Converter</h1>
+
+  <div class="container">
+    <label>Enter a Number (0 to 100000):</label>
+    <input type="number" id="numberInput" placeholder="Enter number...">
+    <button onclick="convert()">Convert to Roman</button>
+
+    <div id="output"></div>
+  </div>
+
+  <script src="script.js"></script>
+
+  <script>
+    function convert() {
+      let value = document.getElementById("numberInput").value;
+      value = Number(value);
+
+      if (value < 0 || value > 100000 || isNaN(value)) {
+        document.getElementById("output").innerText = "⚠ Enter a valid number!";
+        return;
+      }
+
+      document.getElementById("output").innerText = convertToRoman(value);
+    }
+  </script>
 
 </body>
-
 </html>
